--- a/tharzy-client/styles/InputText.module.css
+++ b/tharzy-client/styles/InputText.module.css
@@ -35,9 +35,8 @@
     background-color: var(--slate-100);
     border-radius: 0.3rem;
     display: flex;
-    outline: 3px solid var(--trans);
     width: 100%;
-    transition: background-color 0.2s, outline-color 0.2s;
+    transition: background-color 0.2s, box-shadow 0.2s;
 }
 
 .search i {
@@ -46,9 +45,9 @@
     border-top-right-radius: 0.3rem;
     border-bottom-right-radius: 0.3rem;
     display: flex;
-    height: 2.4rem;
+    height: 2.8rem;
     justify-content: center;
-    min-width: 2.4rem;
+    min-width: 2.8rem;
 }
 
 .search i:before {
@@ -57,7 +56,7 @@
 
 .search input {
     font-size: 1rem;
-    padding: 0.6rem 0.8rem;
+    padding: 0.8rem;
     width: 100%;
 }
 
@@ -70,5 +69,5 @@
 }
 
 .search:focus-within {
-    outline-color: var(--slate-300);
+    box-shadow: 0 0 0 3px var(--slate-300);
 }
