--- a/tharzy-client/styles/globals.css
+++ b/tharzy-client/styles/globals.css
@@ -1,26 +1,3 @@
-
-
-@font-face {
-  font-family: 'bureau grotesque';
-  font-weight: 400;
-  font-style: normal;
-  src: url('../asset/fonts/bureaugrotesque-regular.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'bureau grotesque';
-  font-weight: 700;
-  font-style: normal;
-  src: url('../asset/fonts/bureaugrotesque-bold.woff2') format('woff2');
-}
-
-
-
-
-
-
-
-
 @import 'variables.css';
 
 
@@ -69,7 +46,7 @@ button, input[type='submit'] {
 
 /* FONT SIZES */
 
-h1, h2, h3, h4, h5, h6, h7 .h1, .h2, .h3, .h4, .h5, .h6, .h7 {
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, .h7 {
   font-family: 'bureau grotesque', sans-serif;
   font-weight: bold;
   line-height: 1.35;
@@ -77,6 +54,7 @@ h1, h2, h3, h4, h5, h6, h7 .h1, .h2, .h3, .h4, .h5, .h6, .h7 {
 
 h1, .h1 {
   font-size: 2.5rem;
+  font-weight: bold; /* for some fucking stupid reason, this one is needed to make the font weight bold */
 }
 
 h2, .h2 {
@@ -99,7 +77,7 @@ h6, .h6 {
   font-size: 1.3rem;
 }
 
-h7, .h7 {
+.h7 {
   font-size: 1.2rem;
 }
 
